// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consumer should be able to set initial value 1`] = `
<div>
  <div
    id="value"
  >
    10
  </div>
</div>
`;

exports[`Consumer should have change in store state reflected 1`] = `
<div>
  <div
    id="value"
  >
    131
  </div>
</div>
`;

exports[`State component should work 1`] = `
<h1>
  88
</h1>
`;

exports[`State onChange should trigger on state change 1`] = `
<h1>
  89
</h1>
`;

exports[`change getter 1`] = `
<div>
  <div
    id="selected"
  >
    {"dui":12}
  </div>
</div>
`;

exports[`change getter 2`] = `
<div>
  <div
    id="selected"
  >
    {"dui":12,"geo":"tie"}
  </div>
</div>
`;

exports[`get should have change in store state reflected 1`] = `
<div>
  <div
    id="value"
  >
    131
  </div>
</div>
`;

exports[`use convenience method connect 1`] = `
<div>
  {"bom":509}
</div>
`;
